Rewriting the ReadMe.

--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -22,15 +22,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***HOW TO: READ CAREFULLY***\n",
+        "***HOW TO: READ CAREFULLY EVERYTHING***\n",
         "\n",
         "The notebook is structured in the following way:\n",
         "- **1 - DATA ENHANCEMENT,FINAL MODEL AND FINAL TRAINING:** This big section contains all the process devoted to the enhancement of the dataset, the definition of the final model and the relative training.\n",
-        "  - **HOW TO USE IT:** This should not be runned,unless you want to download all the features for the datasets (more than 4h) or you want to perform a new training(around 50 min).\n",
+        "  - **HOW TO USE IT:** You just have to follow the workflow of the cell.You will wait more than 4h for the enhancement and about 50 min for the training.\n",
         "- **2 - EXPERIMENTAL & JOURNEY TOWARDS THE FINAL SOLUTION:**  This big section contains all the experiments and comparisons we have been gone through.\n",
-        "  - **HOW TO USE IT:** This should not be runned ,unless you want to test the whole experimental journey(around 50 min for every trial).\n",
-        "- **3 - FINAL TESTING (TO-RUN):** This section is  for the final testing, you will find again the importing of the libraries and some redundant functions, in order to allow a third user a direct testing (without running the other 2 big section). You can set the boolean use_hugging_facehub to True if you want that the final model is imported from our personal hugging face repository. Otherwise you can set to False and import the **SAME** final model from the shared folder.\n",
+        "  - **HOW TO USE IT:** This should **not be runned** ,unless you want to test the whole experimental journey(around 50 min for every trial).\n",
+        "- **3 - FINAL TESTING:** This section is  for the final testing, you will find again the importing of the libraries and some redundant functions, in order to allow a third user a direct testing (without running the other 2 big section).\n",
+        "\n",
+        " You can set the boolean use_huggingface_hub to True if you want that the final model is imported from our personal hugging face repository OR to False if you want to use the local model in the shared folder. **THEY ARE THE SAME MODEL OBVIOUSLY**,we are just showing two different modalities of importing the same model,so nothing change. **By defualt is setted to True,so if you don't touch anything you will import the model from our hugging face repo.**\n",
         "  - **HOW TO USE IT:** This **MUST** be runned. In this way you will find the csv output directly on the shared folder.\n",
+        "\n",
+        "**IMPORTANT INSTRUCTIONS ON HOW TO USE THE 3 SECTIONS**\n",
+        "\n",
+        "  As you can see you have two options in order **to use and test the code**:\n",
+        "\n",
+        "- **1- DIRECTLY RUN SECTION 3:** The first and **strongly suggested** option is to directly run section 3,you will have our model already trained(by default imported from our hugging face repo) and the datasets already enhanced (imported from the shared folder),so you can directly test in a couple of minutes.\n",
+        "\n",
+        "   **OR**\n",
+        "\n",
+        "- **2- RUN SECTION 1 AND THEN SECTION 3:** The second option is that you can do the enhancement and the training by yourslef (more than 5 hours in total) running section 1.The model and the enhanced dataset will be saved in the shared folder. Now you can go to section 3 and directly test **setting the boolean use_huggingface_hub to False**,because in our huggingface repo it's present our already trained model. In this way you are,*instead*, re-training a new model,so in order to use it, you have to put the **boolean use_huggingface_hub to False**,that will allow you to use the model in the shared folder that **has now overwritten our**.\n",
         "\n",
         "**CONTACTS**\n",
         "\n",
@@ -507,39 +519,6 @@
       "source": [
         "### 1.0.5: TRAINING SET LOADING, INSPECTION & DISCOVERY"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We make some exploration from the dataset. In the first version of the data provided, we noticed the following \"issues\". The first and second problems have been solved with the introduction of the new dataset version, while the third and fourth (actually not being problems, but dataset features), still persist.\n",
-        "\n",
-        "**NaN LABEL PRESENCE**\n",
-        "\n",
-        "As first thing we noticed that there are 7 rows that are all missing the \"label\" value.\n",
-        "- We decide to eliminate directly these lines since they are both not useful if they are not providing a label and are only very few outliers (7/6251), due to maybe errors in the labeling step.\n",
-        "\n",
-        "**LABEL INCONSISTENCIES**\n",
-        "\n",
-        "The list of the labels are not actually really containig only 3 labels. Indeed, by making a set operation over the \"labels\" column, we noticed that it contains: *{'cultural exclusive', 'cultural', 'cultural agnostic', 'cult', 'cultural representative', 'cultural agn', 'cultural represent', 'cultural ex', 'cultural ag'}*.\n",
-        "  - We decided to counteract this issue by **mantaining only the 3 labels** *{'cultural exclusive', 'cultural representative', 'cultural agnostic'}*.\n",
-        "  - For the lines whose labels are *{'cultural agn', 'cultural ag'}*, the labels are sobstituted with \"cultural agnostic\".\n",
-        "  - For the lines whose labels are *{'cultural represent'}*, the labels are sobstituted with *{'cultural representative'}*.\n",
-        "  - For the lines whose labels are *{'cultural ex'}*, the labels are sobstituted with *{'cultural exclusive'}*.\n",
-        "  - For the lines whose labels are *{'cultural', 'nan', 'cult'}*, we decided to directly drop them.\n",
-        "\n",
-        "(Notice that these labels inconsistencies are really outliers. Indeed, we will remain with out dataset being **6238 samples** long).\n",
-        "\n",
-        "**CLASS IMBALANCE**\n",
-        "\n",
-        "After this cleaning, we notice that the samples we have at our disposal is not provided in an equal manner, but we have instead a **Class Imbalance** issue, Due to the fact that this is not so imbalanced, we decide to just take this into account at **Training Time**, in the future model, by using a **Class Weighting** in the **Loss Function** (e.g., *Weighted Cross-Entropy*).\n",
-        "\n",
-        "**NAME DUPLICATES**\n",
-        "\n",
-        "We also notice that the dataset contains duplicates in the \"name\" column, meaning that there are some words that have a different meaning depending on the context. Since these are very few, we decide to mantain them and not to delete them (also because would be wrong to do this)."
-      ],
-      "metadata": {
-        "id": "uAaYhpxz3bZW"
-      }
     },
     {
       "cell_type": "markdown",
