--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -8325,13 +8325,35 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here you can change the **use_huggingface_hub boolea**n that we described at the beginning. **By default is setted to True so you will import the model from hugging face if you don't touch it.** Setting to false you will import the model from the shared folder, but they are EXACTLY the same model: we are just showing two modalities of importing the same model.\n",
+        "\n",
+        "If instead you want to train again from scratch you will save the model in the local_transformer_model file in the shared folder overwriting ours. ONLY in this case you will have to put the boolean to False,because this allow you to use the new model trained by you (in hugging face is present our trained model,not the new one that you will train)."
+      ],
+      "metadata": {
+        "id": "VKNkwhmMNqC2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# By default we use hugging face\n",
+        "use_huggingface_hub = True"
+      ],
+      "metadata": {
+        "id": "Pa5KRDirOgQL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Device setup.\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "# Paths.\n",
-        "use_huggingface_hub = True #by default we use hugging face\n",
         "hugging_face_model = \"StefanoPreviti/Fine_Tuned_Transformer\"\n",
         "allmpnetbasev2 = \"sentence-transformers/all-mpnet-base-v2\"\n",
         "shared_folder_model = \"/content/drive/MyDrive/BorgiPreviti/local_transformer_model\"\n",
