--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -25,24 +25,23 @@
         "***HOW TO: READ CAREFULLY EVERYTHING***\n",
         "\n",
         "The notebook is structured in the following way:\n",
-        "- **1 - DATA ENHANCEMENT,FINAL MODEL AND FINAL TRAINING:** This big section contains all the process devoted to the enhancement of the dataset, the definition of the final model and the relative training.\n",
-        "  - **HOW TO USE IT:** You just have to follow the workflow of the cell.You will wait more than 4h for the enhancement and about 50 min for the training.\n",
+        "- **1 - DATA ENHANCEMENT,FINAL MODEL,FINAL TRAINING AND FINAL TESTING:** This big section contains all the process devoted to the enhancement of the dataset, the definition of the final model ,the relative training and the final testing.\n",
+        "  - **HOW TO USE IT:** You just have to follow the workflow of the cell.You will wait more than 4h for the enhancement, about 50 min for the training and a couple of minutes for the testing.\n",
         "- **2 - EXPERIMENTAL & JOURNEY TOWARDS THE FINAL SOLUTION:**  This big section contains all the experiments and comparisons we have been gone through.\n",
-        "  - **HOW TO USE IT:** This should **not be runned** ,unless you want to test the whole experimental journey(around 50 min for every trial).\n",
-        "- **3 - FINAL TESTING:** This section is  for the final testing, you will find again the importing of the libraries and some redundant functions, in order to allow a third user a direct testing (without running the other 2 big section).\n",
+        "  - **HOW TO USE IT:** This should **not be runned** ,unless you want to go trough the whole experimental journey(around 50 min for every trial).\n",
+        "- **3 - DIRECT FINAL TESTING:** This section is for the final testing, you will find again the importing of the libraries and some redundant functions, in order to allow a third user a direct testing (without running the other 2 big section).\n",
         "\n",
-        " You can set the boolean use_huggingface_hub to True if you want that the final model is imported from our personal hugging face repository OR to False if you want to use the local model in the shared folder. **THEY ARE THE SAME MODEL OBVIOUSLY**,we are just showing two different modalities of importing the same model,so nothing change. **By defualt is setted to True,so if you don't touch anything you will import the model from our hugging face repo.**\n",
         "  - **HOW TO USE IT:** This **MUST** be runned. In this way you will find the csv output directly on the shared folder.\n",
         "\n",
         "**IMPORTANT INSTRUCTIONS ON HOW TO USE THE 3 SECTIONS**\n",
         "\n",
         "  As you can see you have two options in order **to use and test the code**:\n",
         "\n",
-        "- **1- DIRECTLY RUN SECTION 3:** The first and **strongly suggested** option is to directly run section 3,you will have our model already trained(by default imported from our hugging face repo) and the datasets already enhanced (imported from the shared folder),so you can directly test in a couple of minutes.\n",
+        "- **1- DIRECTLY RUN SECTION 3:** The first and **strongly suggested** option is to directly run section 3,you will have our model already trained(imported from our hugging face repo) and the datasets already enhanced (imported from the shared folder),so you can directly test in a couple of minutes.\n",
         "\n",
         "   **OR**\n",
         "\n",
-        "- **2- RUN SECTION 1 AND THEN SECTION 3:** The second option is that you can do the enhancement and the training by yourslef (more than 5 hours in total) running section 1.The model and the enhanced dataset will be saved in the shared folder. Now you can go to section 3 and directly test **setting the boolean use_huggingface_hub to False**,because in our huggingface repo it's present our already trained model. In this way you are,*instead*, re-training a new model,so in order to use it, you have to put the **boolean use_huggingface_hub to False**,that will allow you to use the model in the shared folder that **has now overwritten our**.\n",
+        "- **2- RUN SECTION 1:** The second option is that you can do the enhancement, the training and the testing by yourslef (more than 5 hours in total) running section 1. The new model trained by you will overwrite our local copy in the shared folder.\n",
         "\n",
         "**CONTACTS**\n",
         "\n",
@@ -6534,6 +6533,162 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### 1.5: FINAL TESTING"
+      ],
+      "metadata": {
+        "id": "jm5XwetGSEtL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Device setup.\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# Paths.\n",
+        "allmpnetbasev2 = \"sentence-transformers/all-mpnet-base-v2\"\n",
+        "shared_folder_model = \"/content/drive/MyDrive/BorgiPreviti/local_transformer_model\"\n",
+        "\n",
+        "#Load tokenizer and base model.\n",
+        "tokenizer = AutoTokenizer.from_pretrained(shared_folder_model, local_files_only=True)\n",
+        "base_model = AutoModel.from_pretrained(allmpnetbasev2)\n",
+        "weights_path = os.path.join(shared_folder_model, \"model.safetensors\")\n",
+        "\n",
+        "# The model here is redifined,just in the case you just want to directly run this section.\n",
+        "class MeanMaxPoolingClassifier(nn.Module):\n",
+        "    def __init__(self, base_model, num_classes=3):\n",
+        "        super().__init__()\n",
+        "        self.encoder = base_model\n",
+        "        hidden_size = base_model.config.hidden_size\n",
+        "        self.dropout = nn.Dropout(0.4)\n",
+        "\n",
+        "        # Classifier with a dropout of 0.4 and ReLU activation function.\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Linear(hidden_size, hidden_size),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.4),\n",
+        "            nn.Linear(hidden_size, num_classes)\n",
+        "        )\n",
+        "        # Alpha parameters learnable.\n",
+        "        self.alpha_param = nn.Parameter(torch.tensor(0.0))\n",
+        "\n",
+        "    def mean_pooling(self, hidden, attention_mask):\n",
+        "        # Multiplication with mask (1 for real number,0 otherwise for padding).\n",
+        "        masked = hidden * attention_mask.unsqueeze(-1)\n",
+        "        # Summing of all the terms.\n",
+        "        sum = masked.sum(dim=1)\n",
+        "        # Clamping in order to avoid division by zero.\n",
+        "        count = attention_mask.unsqueeze(-1).sum(dim=1).clamp(min=1e-9)\n",
+        "        return sum / count\n",
+        "\n",
+        "    def max_pooling(self, hidden, attention_mask):\n",
+        "        # Adding dimension to mask for further multiplication.\n",
+        "        mask = attention_mask.unsqueeze(-1)\n",
+        "        # Filling the padding with extreme low number(the max will never extract them),then computing the max.\n",
+        "        return hidden.masked_fill(mask == 0, -1e9).max(dim=1).values\n",
+        "\n",
+        "    def forward(self, input_ids, attention_mask, labels=None):\n",
+        "        # Output from the encoder.\n",
+        "        encoding = self.encoder(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        hidden = encoding.last_hidden_state\n",
+        "        # Mean and max pooling.\n",
+        "        mean_pool = self.mean_pooling(hidden, attention_mask)\n",
+        "        max_pool = self.max_pooling(hidden, attention_mask)\n",
+        "        # Alpha learnable putted in interval [0,1] by the sigmoid.\n",
+        "        alpha = torch.sigmoid(self.alpha_param)\n",
+        "        # Weighted sum with alpha term.\n",
+        "        weighted_sum = alpha * mean_pool + (1 - alpha) * max_pool\n",
+        "        # Classification head.\n",
+        "        logits = self.classifier(self.dropout(weighted_sum))\n",
+        "\n",
+        "        if labels is not None:\n",
+        "            loss_fn = nn.CrossEntropyLoss()\n",
+        "            loss = loss_fn(logits, labels)\n",
+        "            return {\"loss\": loss, \"logits\": logits}\n",
+        "\n",
+        "        return {\"logits\": logits}\n",
+        "\n",
+        "# Instantiate model and loading weights.\n",
+        "model = MeanMaxPoolingClassifier(base_model)\n",
+        "state_dict = load_file(weights_path)\n",
+        "model.load_state_dict(state_dict)\n",
+        "model.to(device)\n",
+        "model.eval()\n",
+        "\n",
+        "\n",
+        "# Test set.\n",
+        "test_path = \"/content/drive/MyDrive/BorgiPreviti/test_enhanced.csv\"\n",
+        "test_df = pd.read_csv(test_path)\n",
+        "\n",
+        "# Tokenization test function: same as before but without the label fiels\n",
+        "def new_tokenize_function(examples):\n",
+        "    texts = []\n",
+        "    for name, description, summary in zip(examples[\"name\"], examples[\"description\"], examples[\"summary\"]):\n",
+        "        summary = str(summary or \"\")\n",
+        "        sentences = sent_tokenize(summary)\n",
+        "        joined_sentences = \" \".join(sentences[:3]) if sentences else ''\n",
+        "        text = f\"{name}: {description}. Summary: {joined_sentences}\"\n",
+        "        texts.append(text)\n",
+        "    tokens = tokenizer(texts, padding=\"max_length\", truncation=True, max_length=512)\n",
+        "    return tokens\n",
+        "\n",
+        "# Create Test Dataset.\n",
+        "test_dataset = Dataset.from_pandas(test_df)\n",
+        "tokenized_test = test_dataset.map(new_tokenize_function, batched=True)\n",
+        "tokenized_test.set_format(type=\"torch\", columns=[\"input_ids\", \"attention_mask\"])\n",
+        "\n",
+        "# Create DataLoader.\n",
+        "test_loader = DataLoader(tokenized_test, batch_size=16)\n",
+        "\n",
+        "# Inference.\n",
+        "logits_list = []\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    for batch in test_loader:\n",
+        "        input_ids = batch[\"input_ids\"].to(device)\n",
+        "        attention_mask = batch[\"attention_mask\"].to(device)\n",
+        "\n",
+        "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+        "        logits = outputs[\"logits\"]\n",
+        "\n",
+        "        logits_list.append(logits.cpu())\n",
+        "\n",
+        "logits_list = torch.cat(logits_list, dim=0).numpy()\n",
+        "\n",
+        "# Get the argmax to get the predicted labels.\n",
+        "predictions = np.argmax(logits_list, axis=-1)\n",
+        "\n",
+        "# Map back id to labels.\n",
+        "reverse_convertion = {\n",
+        "    0: \"cultural exclusive\",\n",
+        "    1: \"cultural representative\",\n",
+        "    2: \"cultural agnostic\"\n",
+        "}\n",
+        "\n",
+        "predictions = [reverse_convertion[label] for label in predictions]\n",
+        "\n",
+        "# Add predicted labels to the original dataframe.\n",
+        "test_df[\"label\"] = predictions\n",
+        "\n",
+        "# Select only original column plus label.\n",
+        "final_df = test_df[[\"item\", \"name\", \"description\", \"type\", \"category\", \"subcategory\", \"label\"]]\n",
+        "\n",
+        "# Saving in the shared google drive folder.\n",
+        "output_path = \"/content/drive/MyDrive/BorgiPreviti/BorgiPreviti_output_LLM_based_model.csv\"\n",
+        "os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+        "final_df.to_csv(output_path, index=False)\n",
+        "\n",
+        "print(f\"\\n Prediction file saved at: {output_path}\")"
+      ],
+      "metadata": {
+        "id": "xadJrp2KSC7t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 2: EXPERIMENTAL & JOURNEY TOWARDS THE FINAL SOLUTION"
       ],
       "metadata": {
@@ -8325,29 +8480,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Here you can change the **use_huggingface_hub boolea**n that we described at the beginning. **By default is setted to True so you will import the model from hugging face if you don't touch it.** Setting to false you will import the model from the shared folder, but they are EXACTLY the same model: we are just showing two modalities of importing the same model.\n",
-        "\n",
-        "If instead you want to train again from scratch you will save the model in the local_transformer_model file in the shared folder overwriting ours. ONLY in this case you will have to put the boolean to False,because this allow you to use the new model trained by you (in hugging face is present our trained model,not the new one that you will train)."
-      ],
-      "metadata": {
-        "id": "VKNkwhmMNqC2"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# By default we use hugging face\n",
-        "use_huggingface_hub = True"
-      ],
-      "metadata": {
-        "id": "Pa5KRDirOgQL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Device setup.\n",
@@ -8355,21 +8487,15 @@
         "\n",
         "# Paths.\n",
         "hugging_face_model = \"StefanoPreviti/Fine_Tuned_Transformer\"\n",
-        "allmpnetbasev2 = \"sentence-transformers/all-mpnet-base-v2\"\n",
         "shared_folder_model = \"/content/drive/MyDrive/BorgiPreviti/local_transformer_model\"\n",
         "\n",
-        "#Load tokenizer and base model with a boolean for using or not the hugging face hub.\n",
-        "if use_huggingface_hub:\n",
-        "    tokenizer = AutoTokenizer.from_pretrained(hugging_face_model)\n",
-        "    base_model = AutoModel.from_pretrained(hugging_face_model)\n",
-        "    weights_path = \"/content/model.safetensors\"\n",
-        "    url = \"https://huggingface.co/StefanoPreviti/Fine_Tuned_Transformer/resolve/main/model.safetensors\"\n",
-        "    with open(weights_path, \"wb\") as f:\n",
-        "        f.write(requests.get(url).content)\n",
-        "else:\n",
-        "    tokenizer = AutoTokenizer.from_pretrained(shared_folder_model, local_files_only=True)\n",
-        "    base_model = AutoModel.from_pretrained(allmpnetbasev2)\n",
-        "    weights_path = os.path.join(shared_folder_model, \"model.safetensors\")\n",
+        "#Load tokenizer and base model.\n",
+        "tokenizer = AutoTokenizer.from_pretrained(hugging_face_model)\n",
+        "base_model = AutoModel.from_pretrained(hugging_face_model)\n",
+        "weights_path = \"/content/model.safetensors\"\n",
+        "url = \"https://huggingface.co/StefanoPreviti/Fine_Tuned_Transformer/resolve/main/model.safetensors\"\n",
+        "with open(weights_path, \"wb\") as f:\n",
+        "    f.write(requests.get(url).content)\n",
         "\n",
         "# The model here is redifined,just in the case you just want to directly run this section.\n",
         "class MeanMaxPoolingClassifier(nn.Module):\n",
