--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -56,7 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1: DATA ENHANCEMENT,FINAL MODEL AND FINAL TRAINING\n"
+        "## 1: DATA ENHANCEMENT,FINAL MODEL, FINAL TRAINING AND FINAL TESTING\n"
       ],
       "metadata": {
         "id": "8jJ54WKo1WDI"
@@ -8413,7 +8413,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3: FINAL TESTING"
+        "## 3: DIRECT FINAL TESTING"
       ],
       "metadata": {
         "id": "YrZJYD0KNkZO"
